--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,10 @@
+AddDefaultCharset utf-8
+
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php [QSA,L]
 
 DirectoryIndex index.php
+
+php_value memory_limit 256M
