--- a/.htaccess
+++ b/.htaccess
@@ -7,4 +7,8 @@ RewriteRule ^(.*)$ index.php [QSA,L]
 
 DirectoryIndex index.php
 
-php_value memory_limit 256M
+php_value memory_limit 760M
+php_value upload_max_filesize 756M
+php_value post_max_size 758M
+php_flag display_errors on
+php_value error_reporting -1
